--- a/scrappers.ipynb
+++ b/scrappers.ipynb
@@ -2,16 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
-      "Requirement already satisfied: gazpacho in c:\\users\\陈诺1224\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.1)\n",
+      "^C\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
+      "Requirement already satisfied: gazpacho in c:\\users\\陈诺1224\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (1.1)\n"
      ]
     },
     {
@@ -19,7 +26,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 23.1.2 -> 24.3.1\n",
+      "[notice] A new release of pip is available: 23.1.2 -> 25.0\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
